--- a/notes/itercorr_linheat.tex
+++ b/notes/itercorr_linheat.tex
@@ -467,7 +467,7 @@ Fick's law at the boundary gives the IBVP
 \eps\dot{u} - \Delta u &=& 0    \qquad \mbox{ in } \Omega\times (0,T)
 \label{pden}
 \\
-\eps \dn u  &=& f  \qquad \mbox{ on } \pO \times (0,T)
+\dn u  &=& \eps f  \qquad \mbox{ on } \pO \times (0,T)
 \label{bcn}
 \\
 u(\cdot, 0)    &=&  0 \qquad \mbox{ in } \Omega
